--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,7 @@
 {
   "name": "angelov/phpunit-php-vcr",
-  "description": "",
+  "description": "A library that allows you to easily use the PHP-VCR library in your PHPUnit tests.",
   "license": "MIT",
-  "scripts": {
-    "test": "./vendor/bin/phpunit",
-    "cs": "./vendor/bin/php-cs-fixer fix --verbose --diff --dry-run",
-    "cs-fix": "./vendor/bin/php-cs-fixer fix --verbose --diff",
-    "phpstan": "php -d memory_limit=-1 vendor/bin/phpstan analyse -c phpstan.neon --no-progress -vvv",
-    "ec": "./vendor/bin/ec"
-  },
   "authors": [
     {
       "name": "Dejan Angelov",
