--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "php-vcr/php-vcr": "^1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.0",
+    "phpunit/phpunit": "^10.0 || ^11.0",
     "squizlabs/php_codesniffer": "^3.7",
     "phpstan/phpstan": "^1.10"
   },
