--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         php-versions: ['8.2', '8.3', '8.4']
-        phpunit-versions: ['^10.0', '^11.0', '^12.0']
+        dependency-versions: ['lowest', 'highest']
 
     steps:
       - uses: actions/checkout@v3
@@ -34,11 +34,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-php-
 
-      - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
-
-      - name: Install PHPUnit
-        run: composer require --dev --with-all-dependencies phpunit/phpunit:${{ matrix.phpunit-versions }}
+      - name: Install composer dependencies
+        uses: ramsey/composer-install@v2
+        with:
+          dependency-versions: ${{ matrix.dependency-versions }}
 
       - name: Print PHP version
         run: php -v
