--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "php-vcr/php-vcr": "^1.1.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "^10.0 || ^11.0 || ^12.0",
+    "phpunit/phpunit": "^10.0",
     "squizlabs/php_codesniffer": "^3.7",
     "phpstan/phpstan": "^2.0"
   },
