--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,10 @@
     {
       "name": "Dejan Angelov",
       "homepage": "https://angelovdejan.me"
+    },
+    {
+      "name": "Daycry",
+      "homepage": "https://daycryweb.blogspot.com"
     }
   ],
   "require": {
@@ -16,7 +20,14 @@
   "require-dev": {
     "phpunit/phpunit": "^10.0 || ^11.0 || ^12.0",
     "squizlabs/php_codesniffer": "^3.7",
-    "phpstan/phpstan": "^2.0"
+    "phpstan/phpstan": "^2.0",
+    "friendsofphp/php-cs-fixer": "^3.49",
+    "nexusphp/cs-config": "^3.21",
+    "phpstan/extension-installer": "^1.3",
+    "phpstan/phpstan-deprecation-rules": "^2.0",
+    "phpstan/phpstan-phpunit": "^2.0",
+    "phpstan/phpstan-strict-rules": "^2.0",
+    "rector/rector": "^2"
   },
   "autoload": {
     "psr-4": {
@@ -27,5 +38,37 @@
     "psr-4": {
       "Angelov\\PHPUnitPHPVcr\\Tests\\": "tests/"
     }
-  }
+  },
+  "config": {
+      "optimize-autoloader": true,
+      "preferred-install": "dist",
+      "sort-packages": true,
+    "allow-plugins": {
+      "phpstan/extension-installer": true
+    }
+  },
+  "scripts": {
+        "post-update-cmd": [
+            "bash admin/setup.sh"
+        ],
+        "analyze": [
+            "Composer\\Config::disableProcessTimeout",
+            "phpstan analyze",
+            "rector process --dry-run"
+        ],
+        "ci": [
+            "Composer\\Config::disableProcessTimeout",
+            "@cs",
+            "@test"
+        ],
+        "cs": "php-cs-fixer fix --ansi --verbose --dry-run --diff",
+        "cs-fix": "php-cs-fixer fix --ansi --verbose --diff",
+        "mutate": "infection --threads=2 --skip-initial-tests --coverage=build/phpunit",
+        "sa": "@analyze",
+        "style": "@cs-fix",
+        "test": [
+            "Composer\\Config::disableProcessTimeout",
+            "vendor/bin/phpunit"
+        ]
+    }
 }
