--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -14,6 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         php-versions: ['8.2', '8.3', '8.4']
+        dependency-version: [lowest, highest]
 
     steps:
       - uses: actions/checkout@v3
@@ -26,15 +27,15 @@ jobs:
 
       - name: Cache Composer packages
         id: composer-cache
-        uses: actions/cache@v3
+        uses: actions/cache@v4
         with:
           path: vendor
-          key: ${{ runner.os }}-php-${{ matrix.php-versions }}-${{ hashFiles('**/composer.lock') }}
+          key: ${{ runner.os }}-${{ matrix.dependency-version }}-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-php-
 
       - name: Install dependencies
-        run: composer install --prefer-dist --no-progress
+        run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
 
       - name: Check coding standard
         run: vendor/bin/phpcs -p
