use amsey/composer-install

--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -34,8 +34,10 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-php-
 
-      - name: Install dependencies
-        run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction
+      - name: Install composer dependencies
+        uses: ramsey/composer-install@v2
+        with:
+          dependency-versions: ${{ matrix.dependency-versions }}
 
       - name: Check coding standard
         run: vendor/bin/phpcs -p
