--- a/.github/workflows/default.yaml
+++ b/.github/workflows/default.yaml
@@ -14,7 +14,7 @@ jobs:
       fail-fast: false
       matrix:
         php-versions: ['8.2', '8.3', '8.4']
-        dependency-version: [lowest, highest]
+        dependency-versions: [lowest, highest]
 
     steps:
       - uses: actions/checkout@v3
